# libutf

./: .clang-format  CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
include/: utf.h
include/utf/: endianness.h  string.h
src/: endianness.c  endianness.h
src/ascii/: validate.c
src/latin1/: convert-to-utf16.c  convert-to-utf32.c  convert-to-utf8.c  length-from-utf16.c  length-from-utf32.c  length-from-utf8.c
src/utf16/: convert-to-latin1.c  convert-to-utf32.c  convert-to-utf8.c  length-from-latin1.c  length-from-utf32.c  length-from-utf8.c  utf8-convert.c  utf8-length.c  validate.c
src/utf32/: convert-to-latin1.c  convert-to-utf16.c  convert-to-utf8.c  length-from-latin1.c  length-from-utf16.c  length-from-utf8.c  validate.c
src/utf8/: convert-to-latin1.c  convert-to-utf16.c  convert-to-utf32.c  length-from-latin1.c  length-from-utf16.c  length-from-utf32.c  string.c  utf16-convert.c  utf16-length.c  validate.c
test/: CMakeLists.txt
test/utf16/: utf8-convert.c  utf8-length.c  validate-invalid.c  validate.c
test/utf8/: latin1-convert.c  string-append.c  string-prepend.c  string-replace.c  string-substring.c  string.c  utf16-convert.c  utf16-length.c  validate-invalid.c  validate.c
